Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15465

RealHW: 2nd stage setup device detection spams "found an audio function group!" & fatal system error in result

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.12
    • Audio

    Description

      ReactOS 0.4.12-dev (Build 20181218-0.4.12-dev-107-g8540ab0) (Commit 8540ab04d77580aac8ff7cc21721d301f1e2b4f2)

      Detailed connected hardware:
      Processor - AMD Athlon II x3 450.
      RAM - DDR2 800MHz 2x2GB.
      Motherboard - Microstar K9N6PGM2-V2 MS-7309 Ver:2.3.
      Default BIOS settings except of disabled onboard audio & parallel port.
      Ded. Graphics Card - nVidia GeForce GTX 750Ti OEM 2GB.
      Hard Drive - SATA II WD16 00JS-56MHB1 160GB.
      [Volume 1: 160GB BTRFS]
      Optical Drive - SATA II Plextor PX-L890SA.
      Television Card - Medion TV Tuner SAA7134 CreatixCTX918-V2.
      Ded. Sound Card - Asus Xonar DGX.

      Additionally:
      USB Mouse working.
      PS/2 Keyboard working.
      Buzzer working.

      After successful 1st stage setup device detection fails after restart during 2nd stage and it stops probably on audio driver trying to use nVidia AV outputs:
      https://driverscollection.com/Search/PCI%5CVEN_10DE%26DEV_1380%26SUBSYS_3E321642
      https://driverscollection.com/Search/PCI%5CVEN_10DE%26DEV_1380%26SUBSYS_3E321642

      (base/services/umpnpmgr/umpnpmgr.c:3218) Installing: PCI\VEN_10DE&DEV_0FBC&SUBSYS_3E321642&REV_A1\4&7c18a3e1&20
      err:(dll/win32/setupapi/queue.c:1088) LZOpenFileW(1) error -1 L"C:\\ReactOS\\inf\\hdaudbus.sys"
      err:(dll/win32/setupapi/queue.c:1826) copy error 2 L"C:\\ReactOS\\inf\\hdaudbus.sys" -> L"C:\\ReactOS\\System32\\drivers\\hdaudbus.sys"
      (ntoskrnl/io/pnpmgr/plugplay.c:1063) A new driver will be loaded for 'PCI\VEN_10DE&DEV_0FBC&SUBSYS_3E321642&REV_A1\4&7c18a3e1&20' (no FDO above)
      (ntoskrnl/mm/ARM3/sysldr.c:176) Loading: \SystemRoot\System32\drivers\HDAudBus.sys at F6B98000 with 15 pages
      (drivers/wdm/audio/hdaudbus/fdo.cpp:436) NumInputStreams 4
      (drivers/wdm/audio/hdaudbus/fdo.cpp:437) NumOutputStreams 4
      (drivers/wdm/audio/hdaudbus/fdo.cpp:438) NumBiDirStreams 0
      (drivers/wdm/audio/hdaudbus/fdo.cpp:370) hda: CORB read pointer reset not acknowledged
      (drivers/wdm/audio/hdaudbus/fdo.cpp:622) Codecs 1
      (drivers/wdm/audio/hdaudbus/fdo.cpp:29) HDA_InterruptService c0000000
      (drivers/wdm/audio/hdaudbus/fdo.cpp:57) Response 10de0060 ResponseFlags 0 Cad 0
      (drivers/wdm/audio/hdaudbus/fdo.cpp:57) Response 100100 ResponseFlags 0 Cad 0
      (drivers/wdm/audio/hdaudbus/fdo.cpp:214) hda Codec 0 Vendor: 10de Product: 0060, Revision: 1.0.1.0 NodeStart 255 NodeCount 255 
      (drivers/wdm/audio/hdaudbus/fdo.cpp:29) HDA_InterruptService c0000000
      (drivers/wdm/audio/hdaudbus/fdo.cpp:57) Response 10001 ResponseFlags 0 Cad 0
      (drivers/wdm/audio/hdaudbus/fdo.cpp:222) NodeId 255 GroupType 1
      (drivers/wdm/audio/hdaudbus/fdo.cpp:29) HDA_InterruptService c0000000
      (drivers/wdm/audio/hdaudbus/fdo.cpp:57) Response 0 ResponseFlags 0 Cad 0
      (drivers/wdm/audio/hdaudbus/fdo.cpp:238) NodeId ff found an audio function group!
      (drivers/wdm/audio/hdaudbus/fdo.cpp:222) NodeId 256 GroupType 1
      

      Debug log collected using built-in RS232 port.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              Zcooger Zcooger
              Votes:
              2 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: